// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceOperationBar component should match snapshot enterNameStep 1`] = `
<div
  class="sidebar-bottom-bar"
  role="toolbar"
>
  <div
    class="sidebar-bottom-bar__step"
  >
    <div
      class="sidebar-subscribe-bar__link"
    />
    <div
      class="sidebar-subscribe-bar__content"
      data-testid="sidebar-subscribe-bar-content"
    >
      <div
        class="flex-1"
      >
        <input
          aria-label="subscribed-source-name"
          class="sidebar-subscribe-bar__input"
          placeholder="Save as Name"
          value=""
        />
      </div>
      <div
        class="p-2  sidebar-subscribe-bar__icon"
        role="button"
        tabindex="0"
      >
        <div
          class="w-5 h-5 m-auto  "
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-2  "
    role="button"
    tabindex="0"
  >
    <div
      class="w-5 h-5 m-auto  "
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6m0 0v6m0-6h6m-6 0H6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
  <div
    class="p-2  "
    role="button"
    tabindex="0"
  >
    <div
      class="w-5 h-5 m-auto  "
    >
      <svg
        class=""
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SourceOperationBar component should match snapshot enterUrlStep 1`] = `
<div
  class="sidebar-bottom-bar"
  role="toolbar"
>
  <div
    class="sidebar-bottom-bar__step"
  >
    <div
      class="sidebar-feed-search-bar__container"
    >
      <div
        class="flex-1"
      >
        <input
          class="sidebar-feed-search-bar__input"
          placeholder="Feed URL"
          value=""
        />
      </div>
      <div
        class="p-2  sidebar-feed-search-bar__icon show"
        role="button"
        tabindex="0"
      >
        <div
          class="w-5 h-5 m-auto  "
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 9a2 2 0 114 0 2 2 0 01-4 0z"
            />
            <path
              clip-rule="evenodd"
              d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-13a4 4 0 00-3.446 6.032l-2.261 2.26a1 1 0 101.414 1.415l2.261-2.261A4 4 0 1011 5z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-2  "
    role="button"
    tabindex="0"
  >
    <div
      class="w-5 h-5 m-auto  "
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6m0 0v6m0-6h6m-6 0H6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
  <div
    class="p-2  "
    role="button"
    tabindex="0"
  >
    <div
      class="w-5 h-5 m-auto  "
    >
      <svg
        class=""
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SourceOperationBar component should match snapshot when not rendered 1`] = `
<div
  class="sidebar-bottom-bar"
  role="toolbar"
>
  <div
    class="p-2  "
    role="button"
    tabindex="0"
  >
    <div
      class="w-5 h-5 m-auto  "
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6m0 0v6m0-6h6m-6 0H6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
  <div
    class="p-2  "
    role="button"
    tabindex="0"
  >
    <div
      class="w-5 h-5 m-auto  "
    >
      <svg
        class=""
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;
